compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_tuple_projection_non_tuple.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_tuple_projection_non_tuple.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × tuple projection on non-tuple value
   ╭─[tests/fixtures/diagnostics/types/inference_tuple_projection_non_tuple.ml:3:19]
 2 │   let value = 42.0;
 3 │   let projected = value.0;
   ·                   ───┬───
   ·                      ╰── only tuple values can be projected with `.0`, `.1`, and similar indexes
 4 │   println("unreachable")
   ╰────
  help: project a tuple value or remove the tuple index
